[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "mutool"
version = "0.1.0"

[dependencies]
detour = "0.2"
hsl = "0.1"
knock = "0.1.5"
lazy_static = "0.2.8"
libc = "0.2"
matches = "0.1.6"
num-traits = "0.1.40"
pest = "1.0.0-beta.15"
pest_derive = "1.0.0-beta.15"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"
strsim = "0.6.0"
tap = "0.2.1"
toml = "0.4"

[dependencies.muonline-packet]
features = ["serialize"]
path = "../packet/packet"

[dependencies.musdk]
path = "../sdk"

[lib]
crate-type = ["cdylib"]

[target]

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
boolinator = "2.4.0"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
winapi = "0.2"
